<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#D9D9D9"
    tools:context=".views.MainActivity"

    tools:layout_editor_absoluteX="6dp"
    tools:layout_editor_absoluteY="-4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="658dp"
        app:cardCornerRadius="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagev"
            android:scaleType="centerCrop"
            android:src="@drawable/dama" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/hello_dam"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardview"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/notification"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/notif"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nameuser"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notification_icon"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/search"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:autofillHints=""
        android:background="@drawable/search"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="339dp"
        android:layout_height="192dp"
        android:id="@+id/view_pagerid"
        android:layout_marginStart="36dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        android:contentDescription="@string/todo"/>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-22dp"
        app:dotsColor="#D9D9D9"
        app:dotsCornerRadius="8dp"
        app:dotsSize="10dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pagerid"
        app:progressMode="true"
        app:selectedDotColor="@color/white" />

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/btn_item"
        android:layout_width="364dp"
        android:layout_height="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        app:justifyContent="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pagerid">

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/mn_coffee"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:gravity="center"
            app:toggle_selectedBackgroundColor="@color/black"
            app:toggle_text="Coffee"
            app:toggle_textSize="12dp" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/mn_ncoffee"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:gravity="center"
            app:toggle_selectedBackgroundColor="@color/black"
            app:toggle_text=" Non Coffee"
            app:toggle_textSize="12dp" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/mn_extras"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:gravity="center"
            app:toggle_selectedBackgroundColor="@color/black"
            app:toggle_text="Extras"
            app:toggle_textSize="12dp" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/mn_mccoffee"
            android:layout_width="140dp"
            android:layout_height="32dp"
            android:gravity="center"
            app:toggle_selectedBackgroundColor="@color/black"
            app:toggle_text="Machine Coffee"
            app:toggle_textSize="12dp" />

    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="409dp"
        android:layout_height="352dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_item">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>